[gd_scene load_steps=20 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Hurtbox.gd" type="Script" id=5]
[ext_resource path="res://Enemies/DetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollider.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "fly",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=10]
radius = 47.0

[sub_resource type="CircleShape2D" id=11]
radius = 4.0

[sub_resource type="CircleShape2D" id=12]
radius = 4.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "fly"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -13 )
shape = SubResource( 9 )

[node name="DetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.101961 )
shape = SubResource( 10 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -15 )
shape = SubResource( 11 )

[node name="SoftCollider" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollider" index="0"]
shape = SubResource( 12 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="WanderController" parent="." instance=ExtResource( 8 )]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="DetectionZone"]

[editable path="SoftCollider"]
